# DataPilot-QA

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
examples/: docker-compose.yml  pg_to_pg.yaml
src/datamigrate_qa/: __init__.py  cli.py  models.py
src/datamigrate_qa/ai/: __init__.py  analyst.py  client.py  nl_generator.py  summarizer.py
src/datamigrate_qa/config/: __init__.py  loader.py  models.py
src/datamigrate_qa/connectors/: __init__.py  base.py  mysql.py  oracle.py  postgres.py  registry.py  snowflake.py
src/datamigrate_qa/executor/: __init__.py  parallel.py  runner.py
src/datamigrate_qa/generators/: __init__.py  aggregate_recon.py  base.py  field_match.py  missing_rows.py  null_duplicate.py  row_count.py  schema_validator.py
src/datamigrate_qa/introspection/: __init__.py  schema_inspector.py
src/datamigrate_qa/mapping/: __init__.py  auto_mapper.py  mapping_model.py  yaml_mapper.py
src/datamigrate_qa/reporting/: __init__.py  console_reporter.py  html_reporter.py  json_reporter.py
tests/: conftest.py
tests/integration/: test_postgres_e2e.py
tests/unit/: test_auto_mapper.py  test_config.py  test_console_reporter.py  test_models.py  test_row_count_generator.py
ui/: start.ps1
ui/backend/: main.py
ui/frontend/: index.html  package-lock.json  package.json
ui/frontend/src/: App.tsx  api.ts  types.ts
ui/frontend/src/components/: AISummaryPanel.tsx  AITestGenerator.tsx  ConnectionForm.tsx  CustomTestEditor.tsx  GeneratorToggles.tsx  ResultsDashboard.tsx  TableManager.tsx
